tests/snapshots/deserializer__bool_false.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nfalse"
---
=== VALUE ===
Bool(false)

=== HEAP ===
Heap {}

