tests/snapshots/deserializer__bool_true.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\ntrue"
---
=== VALUE ===
Bool(true)

=== HEAP ===
Heap {}

