tests/snapshots/deserializer__boolean_primitive_false.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Boolean(false)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BooleanObject(
        false,
    ),
}

