tests/snapshots/deserializer__boolean_primitive_true.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Boolean(true)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BooleanObject(
        true,
    ),
}

