tests/snapshots/deserializer__circular_reference.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nconst foo = {}; foo.foo = foo; foo"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("foo"): HeapReference(
            *0,
        ),
    },
}

