tests/snapshots/deserializer__date.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Date(1)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Date {
        time_since_epoch: 1.0,
    },
}

