tests/snapshots/deserializer__date_invalid.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Date(NaN)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Date {
        time_since_epoch: NaN,
    },
}

