tests/snapshots/deserializer__date_max.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Date(8640000000000000)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Date {
        time_since_epoch: 8640000000000000.0,
    },
}

